<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/bitcoin_logo"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogo"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:layout_marginTop="-7dp"
        android:layout_centerVertical="true"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="34sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_below="@id/app_name"
        android:text="@string/app_quote"
        android:textColor="#000"
        android:textSize="15sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/developer_twitter"
        android:textColor="#000"
        android:textSize="16sp"/>

</RelativeLayout>